Fixed bug where we don't select the highest (z-index) image, we selected by which image was added to the first.

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,10 @@ body{
     margin:10px;
 }
 .image.selected{
+    -webkit-transform-origin: center center;
+    -moz-transform-origin: center center;
+    -o-transform-origin: center center;
+    transform-origin: center center;
     -webkit-animation: border-pulsate-dark 2s infinite;
     -moz-animation: border-pulsate-dark 2s infinite;
     animation: border-pulsate-dark 2s infinite;
